--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,17 @@ footer {
 
   #column-1 {
     background-color: lightblue;
+    width: 50%;
   }
 
   #column-2 {
     background-color: mediumblue;
+    width: 50%;
   }
 
   #column-3 {
     background-color: darkblue;
+    width: 100%;
   }
 
   footer {
@@ -88,16 +91,20 @@ footer {
     background-color: lightgreen;
   }
 
+
   #column-1 {
     background-color: lightseagreen;
+    width: 33.3333%;
   }
 
   #column-2 {
     background-color: seagreen;
+    width: 33.3333%;
   }
 
   #column-3 {
     background-color: darkseagreen;
+    width: 33.3333%;
   }
 
   footer {
